# rufetch

./: Cargo.toml  README.md  install-linux.sh
ascii/: Arch Linux  Garuda Linux  default
src/: main.rs
