[package]
name = "rufetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking"] }
sysinfo = "0.23.11"
tokio = { version = "1", features = ["full"] }

